REDO-690 bugfix arrow overlapping loan amount text

--- a/source/css/scss/app/pages/loan.scss
+++ b/source/css/scss/app/pages/loan.scss
@@ -401,14 +401,13 @@
     .lend-values-select {
       height: 2.8rem;
       margin: 0;
-      padding: 0;
+      padding: 0 40px;
       border: 0;
       background: $kiva-accent-blue;
       outline: none;
       color: $white;
       font-size: 18px;
       font-weight: bold;
-      text-indent: 35%;
     }
     .lend-arrow {
       width: 21px;
